--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
 ue:
   config-file: static/ueditor/jsp/config.json #resources目录下配置文件的位置
   server-url: /ueditor.do #服务器统一请求接口路径
-  local:
+  local: #上传到本地配置
     url-prefix: /file/ #"/"结尾 自定义上传时字段无意义
     physical-path: C:/upload/ #存储文件的绝对路径 必须使用标准路径"/"作为分隔符  自定义上传时字段无意义
-  qiniu: #参数对应官方文档 https://developer.qiniu.com/kodo/sdk/1239/java
+  qiniu: #上传到七牛云配置 参数对应官方文档 https://developer.qiniu.com/kodo/sdk/1239/java
     accessKey: ---
     secretKey: ---
     cdn: https://--- #融合 CDN 加速域名
